# ZsxqCrawler

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  README.md  account_info_db.py  accounts_manager.py  accounts_sql_manager.py  ai_analyzer.py  auto_scheduler.py  db_path_manager.py  find_topic.py  fix_topic_id.py  fix_topic_id_v2.py  global_analyzer.py  global_pipeline.py  group_scan_filter.json  group_scan_filter.py  image_cache_manager.py  logger_config.py  main.py  migrate_accounts_to_sql.py  package-lock.json  pyproject.toml  sector_heat.py  stock_aliases.json  stock_analyzer.py  stock_exclusion.py  zsxq_columns_database.py  zsxq_database.py  zsxq_file_database.py  zsxq_file_downloader.py  zsxq_interactive_crawler.py
.ai/: architecture_context.md  project_design.md  prompt_workflow.md
.codex/environments/: environment.toml
api/: app_factory.py
app/: main.py
config/: group_scan_filter.json  stock_exclude.json
docs/: ARCHITECTURE.md  CODEBASE_MAP.md  ROUTING_MAP.md
frontend/: next.config.ts  package-lock.json  package.json  test_topic_api.js
modules/: __init__.py
scripts/: check_root_python_files.sh  check_root_test_files.sh
tests/: compat_shims_test.py  market_data_failover_test.py  market_data_sync_realtime_test.py  provider_health_registry_test.py  realtime_provider_failover_priority_test.py  stock_events_fast_mode_test.py  stock_events_refresh_async_test.py  stock_performance_recalc_test.py  t0_dual_view_board_test.py  t0_manual_refresh_mode_test.py  t0_snapshot_logic_test.py  topic_analysis_backfill_test.py
(+112 files in other folders)
