[project]
name = "knowledge-planetb"
version = "0.1.0"
description = "知识星球数据爬取和管理工具"
authors = [
    {name = "46", email = ""},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28.0",
    "tomli>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "akshare>=1.18.25",
    "tushare>=1.4.24",
    "pyahocorasick>=2.3.0",
    "httpx>=0.27.0",
    "exchange-calendars>=4.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]

[dependency-groups]
dev = []
